# bellweaver

./: .dockerignore  .env.docker.example  .env.example  .env.md  .gitignore  CLAUDE.md  COMPASS_AUTHENTICATION_STRATEGIES.md  COMPASS_PYTHON_CLIENT_PLAN.md  COMPASS_USAGE_GUIDE.md  DEBUGGING_RESULTS.md  DEBUGGING_SESSION_SUMMARY.txt  Dockerfile  GEMINI.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_TEST_GUIDE.md  MVP_ARCHITECTURE.md  NEXT_STEPS_CHECKLIST.md  PLAN.md  PLAYWRIGHT_AUTHENTICATION_DEBUG.md  PLAYWRIGHT_DEBUGGING_INDEX.md  PLAYWRIGHT_TESTING_SUMMARY.md  PLAYWRIGHT_VS_PUPPETEER_ANALYSIS.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  TESTING_BROWSER_AUTH.md  Taskfile.yml  docker-compose.yml  pyproject.toml
backend/: .env.example  .gitignore  debug_browser_login.py  pyproject.toml  test_compass_client.py
compass/: .gitignore  README.md  pyproject.toml
compass/compass/: __init__.py  client.py  mock_client.py  parser.py
compass/tests/: __init__.py  test_client.py  test_models.py  test_parser.py
docs/: COMPASS_AUTHENTICATION_STRATEGIES.md  COMPASS_PYTHON_CLIENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION_TEST_GUIDE.md  MVP_ARCHITECTURE.md  NEXT_STEPS.md  PLAN.md  QUICK_START.md  architecture.md  docker-deployment.md  index.md  migration-compass-decoupling.md  quick-start.md
frontend/: README.md  Taskfile.yml  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
reference-implementation/: compass-education
src/: __init__.py
tests/: README_INTEGRATION_TESTS.md  test_compass_browser_client.py  test_fixtures.py  (+1 more)
(+105 files in other folders)
