[tool.poetry]
name = "compass"
version = "0.1.0"
description = "Python client for Compass Education API with parsing and validation"
authors = ["Jethro <jethro@example.com>"]
readme = "README.md"
packages = [{include = "compass"}]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.12.0"
pydantic = "^2.10.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
